udated version of my homework  where i was able to get my user input to save on the page after you refresh it, still not done but came father than the last effort

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <script src="jquery-3.5.1.min.js"></script>
+
     <title>Work Day Scheduler</title>
   </head>
 
@@ -32,15 +32,15 @@
     <div class="container"> 
       <div class="list-group">
        
-        <label class="time">9AM:</label><input id="newDay" class="hour"><button class="saveBtn">Save</button> 
-        <label class="time">10AM:</label><input id="newDay" class="hour"><button class="saveBtn">Save</button>
-        <label class="time">11AM:</label><input id="newDay" class="hour"><button class="saveBtn">Save</button>
-        <label class="time">12PM:</label><input id="newDay" class="hour"><button class="saveBtn">Save</button>
-        <label class="time">1PM:</label><input id="newDay" class="hour"><button class="saveBtn">Save</button>
-        <label class="time">2PM:</label><input id="newDay" class="hour"><button class="saveBtn">Save</button>
-        <label class="time">3PM:</label><input id="newDay" class="hour"><button class="saveBtn">Save</button>
-        <label class="time">4PM:</label><input id="newDay" class="hour"><button class="saveBtn">Save</button>
-        <label class="time">5PM:</label><input id="newDay" class="hour"><button class="saveBtn">Save</button>
+        <label class="time">9AM:</label><input id="newDay9" class="hour"><button class="saveBtn" id="9">Save</button> 
+        <label class="time">10AM:</label><input id="newDay10" class="hour"><button class="saveBtn" id="10">Save</button>
+        <label class="time">11AM:</label><input id="newDay11" class="hour"><button class="saveBtn" id="11">Save</button>
+        <label class="time">12PM:</label><input id="newDay12" class="hour"><button class="saveBtn" id="12">Save</button>
+        <label class="time">1PM:</label><input id="newDay1" class="hour"><button class="saveBtn" id="1">Save</button>
+        <label class="time">2PM:</label><input id="newDay2" class="hour"><button class="saveBtn" id="2">Save</button>
+        <label class="time">3PM:</label><input id="newDay3" class="hour"><button class="saveBtn" id="3">Save</button>
+        <label class="time">4PM:</label><input id="newDay4" class="hour"><button class="saveBtn" id="4">Save</button>
+        <label class="time">5PM:</label><input id="newDay5" class="hour"><button class="saveBtn" id="5">Save</button>
       </div>
     </div>
  
